--- a/rec_sys/sheet02.ipynb
+++ b/rec_sys/sheet02.ipynb
@@ -15,7 +15,18 @@
    "source": [
     "## Exercise 1\n",
     "\n",
-    "TODO"
+    "**Task:** Consider a web shop that sells furniture and uses a recommendation system. When a\n",
+    "new user creates an account and likes one product, he will be presented with similar\n",
+    "products on his next visit.\n",
+    "\n",
+    "How can a competitor - in principle - try to steal the valuable data for recommendation\n",
+    "from this website? Does this work better when the web shop implemented a content-\n",
+    "based (CB) or a collaborative filtering (CF) system? What data would the competitor be able to\n",
+    "infer? Would this technique have an impact on the recommendation system, i.e., would\n",
+    "this attack create a bias on the data? Why is this attack probably not viable in any\n",
+    "case?\n",
+    "\n",
+    "**Solution:** By liking a product and receiving a list of similar products, the competitor can infer which products are similar to the one liked. This works better when the shop implements a CB approach. On one hand, the cold-start problem specific to CF disappears. On the other hand, user-user CF is based on matching a specific user to all the others. That is, a CF approach would mean the competitor would have to create specific users to receive recommendations for this specific user. The competitor would be able to infer which products are similar to the liked product. While a slight bias might be thinkable in the CF case, irrespective of the recommendation approach, nothing would happen. In the CB setting this is due to the features being hand-crafted. For the user-user CF setting, the competitor would have to create user vectors somewhat similar to the existing ones and additionally like items that the existing user would have never considered. The attack is not viable since it would require the creation of many user accounts which would like a single item or a very small set of items. This activity, however, would most certainly be detected by the server hosting the web shop."
    ]
   },
   {
