have accidentally overwritten number 5, it should be restored now

--- a/rec_sys/sheet02.ipynb
+++ b/rec_sys/sheet02.ipynb
@@ -210,6 +210,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exercise 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are different options for tracking memory allocation in JAX. Firstly there is the built-in JAX.profiler, which includes the method device-memory-profile. This captures a JAX device memory profile as pprof-format protocol buffer, which you can read with the pprof-tool. As far as i understand this that only works with go. I also looked at jax-smi, which is supposed to be a \"a tool for real-time inspection of the memory usage of a JAX process\". This also returns a pprof file. Reading this file takes me some time and im trying different solutions on windows."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are different options for tracking memory allocation in JAX. Firstly there is the built-in JAX.profiler, which includes the method device-memory-profile. This captures a JAX device memory profile as pprof-format protocol buffer, which you can read with the pprof-tool. As far as i understand this that only works with go. I also looked at jax-smi, which is supposed to be a \"a tool for real-time inspection of the memory usage of a JAX process\". This also returns a pprof file. Reading this file takes me some time and im trying different solutions on windows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: jax-smi in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (1.0.4)\n",
+      "Requirement already satisfied: jax>=0.2.16 in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax-smi) (0.4.23)\n",
+      "Requirement already satisfied: fire in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax-smi) (0.7.0)\n",
+      "Requirement already satisfied: ml-dtypes>=0.2.0 in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax>=0.2.16->jax-smi) (0.4.0)\n",
+      "Requirement already satisfied: numpy>=1.22 in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax>=0.2.16->jax-smi) (1.26.4)\n",
+      "Requirement already satisfied: opt-einsum in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax>=0.2.16->jax-smi) (3.3.0)\n",
+      "Requirement already satisfied: scipy>=1.9 in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from jax>=0.2.16->jax-smi) (1.13.1)\n",
+      "Requirement already satisfied: termcolor in c:\\users\\aaron maekel\\.conda\\envs\\mmd\\lib\\site-packages (from fire->jax-smi) (2.1.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install jax-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dataclasses\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "import tensorflow_datasets as tfds\n",
+    "from jax_smi import initialise_tracking\n",
+    "import pandas as pd\n",
+    "import pstats\n",
+    "import jax.profiler\n",
+    "from datetime import datetime\n",
+    "import tensorboard\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a test matrix u and v to test memory allocation using jax-smi\n",
+    "key = jax.random.PRNGKey(0)\n",
+    "size = 1000\n",
+    "num_choices = 50\n",
+    "mat_u = jax.random.normal(jax.random.PRNGKey(0), (1000, 1000))  # as initialized in init_latent_factors\n",
+    "mat_v = jax.random.normal(jax.random.PRNGKey(1), (1000, 1000))\n",
+    "rows = jax.random.choice(key, jnp.arange(size), (num_choices,), replace=False)\n",
+    "columns = jax.random.choice(key, jnp.arange(size), (num_choices,), replace=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'jax_smi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 9\u001b[0m\n\u001b[0;32m      5\u001b[0m     estimator \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m(mat_u \u001b[38;5;241m@\u001b[39m mat_v)[(rows, columns)]\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m estimator\n\u001b[1;32m----> 9\u001b[0m \u001b[43mmse_loss_one_batch_test\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmat_u\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmat_v\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrows\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[1;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m, in \u001b[0;36mmse_loss_one_batch_test\u001b[1;34m(mat_u, mat_v, rows, columns)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;129m@jax\u001b[39m\u001b[38;5;241m.\u001b[39mjit  \u001b[38;5;66;03m# Comment out for single-step debugging\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmse_loss_one_batch_test\u001b[39m(mat_u, mat_v, rows, columns):\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# Original code in question\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m     \u001b[43mjax_smi\u001b[49m\u001b[38;5;241m.\u001b[39minitialise_tracking()\n\u001b[0;32m      5\u001b[0m     estimator \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m(mat_u \u001b[38;5;241m@\u001b[39m mat_v)[(rows, columns)]\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m estimator\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'jax_smi' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "@jax.jit  # Comment out for single-step debugging\n",
+    "def mse_loss_one_batch_test(mat_u, mat_v, rows, columns):\n",
+    "    # Original code in question\n",
+    "    jax_smi.initialise_tracking()\n",
+    "    estimator = -(mat_u @ mat_v)[(rows, columns)]\n",
+    "\n",
+    "    return estimator\n",
+    "\n",
+    "mse_loss_one_batch_test(mat_u, mat_v, rows, columns)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercise 6\n"
    ]
   },
