--- a/rec_sys/sheet02.ipynb
+++ b/rec_sys/sheet02.ipynb
@@ -210,6 +210,457 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercise 4\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# a)\n",
+    "\n",
+    "If the maximum Degree is N for one variable, than it can be in the polynomial part as {0,1,...,N} variants.\n",
+    "THis means that there are (N_x + 1 ) * (N_Y + 1)  * ( N_z + 1) possible  combinations of these variables resulting in the same amount of coefficients.\n",
+    "\n",
+    "Version 1: Shape: [t,4] (x,y,z, and coeff) (dependent on t)\n",
+    "\n",
+    "Version 2:This would result in an three dimensional matrix having the shape [((N_x + 1 ), (N_Y + 1),( N_z + 1))] (independent of t )\n",
+    "\n",
+    "we tried implementing both versions, as we were unsure how to proceed, in both cases problems arised."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import rec_sys.jax_intro as jax_intro\n",
+    "import jax.numpy as jnp\n",
+    "import jax\n",
+    "import time\n",
+    "import random\n",
+    "rnd_seed = int(time.time())\n",
+    "rnd_key = jax.random.PRNGKey(rnd_seed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example polynomial based on Polynomial configuration 2\n",
+      "[[ 0  1  0  0]\n",
+      " [ 3  0  2  2]\n",
+      " [ 0  1  2  1]\n",
+      " [ 1  0  0 -4]\n",
+      " [ 2  1  2 -5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "def gen_polynomial(Nx,Ny,Nz,t):\n",
+    "    \n",
+    "    max_arr = [Nx,Ny,Nz]\n",
+    "    \n",
+    "    \n",
+    "    indx = jax.random.randint(  rnd_key, (t,3), jnp.zeros((t,3)),\n",
+    "                                jnp.reshape(jnp.repeat(jnp.array([Nx+1,Ny+1,Nz+1]),repeats=t,axis=0 ),\n",
+    "                                newshape=(3,t)).T)\n",
+    "    \n",
+    "    \n",
+    "    for i in range(3):\n",
+    "        \n",
+    "        if max(indx[:,i])< max_arr[i] :\n",
+    "            rnd_indx = random.randint(0, t-1)\n",
+    "            indx = indx.at[rnd_indx,i].set(max_arr[i]) \n",
+    "    LIM = 5\n",
+    "    rnd_coeff = jax.random.randint(  rnd_key, (t,1), -LIM * jnp.ones((t,1)),\n",
+    "                                    LIM * jnp.ones((t,1))\n",
+    "                                     )\n",
+    "    coeff_mat = jnp.hstack([indx,rnd_coeff])\n",
+    "    return(coeff_mat)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def f(x,y,z,polym):\n",
+    "    res = jnp.zeros(x.shape[0])\n",
+    "    for i in range(polym.shape[0]):\n",
+    "        res += polym[i,3] * jnp.power(x,polym[i,0])* jnp.power(y,polym[i,1])* jnp.power(z,polym[i,2])\n",
+    "    return(res)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def generate_noisy_set(N,coeff_mat):\n",
+    "    noise_frac, rnd_seed =  0.25, int(time.time())\n",
+    "    x,y,z = jnp.linspace(-3, 3,N),jnp.linspace(-3, 3,N),jnp.linspace(-3, 3,N)\n",
+    "    res_pure = f(x,y,z,coeff_mat)\n",
+    "    # Add some noise to data\n",
+    "    rnd_key = jax.random.PRNGKey(rnd_seed)\n",
+    "    y_with_noise = res_pure + res_pure * noise_frac * jax.random.normal(rnd_key, (N,))\n",
+    "    return x,y,z,y_with_noise\n",
+    "\n",
+    "polym = gen_polynomial(3,1,2,5)\n",
+    "print(\"Example polynomial based on Polynomial configuration 2\")\n",
+    "print(polym)\n",
+    "#print(generate_noisy_set(10,polym) )\n",
+    "\n",
+    "#print(generate_noisy_set(2,jnp.array([[1,1,1,1],[0,0,0,0]])) )\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example polynomial based on Polynomial configuration 2\n",
+      "[[[ 0.  0.  0.]\n",
+      "  [ 0.  0.  3.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [-1.  0.  0.]]\n",
+      "\n",
+      " [[ 0. -1.  0.]\n",
+      "  [ 0. -1.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  1.  0.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen_polynomial2(Nx,Ny,Nz,t):\n",
+    "    LIM = 3\n",
+    "    rnd_seed = int(time.time())\n",
+    "    max_arr = [Nx,Ny,Nz]\n",
+    "\n",
+    "    coeff_mat = jnp.zeros((Nx+1,Ny+1,Nz+1))\n",
+    "    for _ in range(t):\n",
+    "        rnd_coeff = random.randint(-LIM,LIM)\n",
+    "        while rnd_coeff ==0:\n",
+    "            rnd_coeff = random.randint(-LIM,LIM)\n",
+    "        coeff_mat = coeff_mat.at[random.randint(0,Nx),random.randint(0,Ny),random.randint(0,Nz)].set(rnd_coeff) \n",
+    "\n",
+    "\n",
+    "    while not jnp.any(coeff_mat[-1,:,:]):\n",
+    "        coeff_mat = jnp.roll(coeff_mat,1,0)\n",
+    "    while not jnp.any(coeff_mat[:,-1,:]):\n",
+    "        coeff_mat = jnp.roll(coeff_mat,1,1)\n",
+    "    while not jnp.any(coeff_mat[...,-1]):\n",
+    "        coeff_mat = jnp.roll(coeff_mat,1,2)\n",
+    "    return coeff_mat\n",
+    "\n",
+    "\n",
+    "def f2(x,y,z,polym):\n",
+    "    res = jnp.zeros(x.shape[0])\n",
+    "    for i in range(polym.shape[0]):\n",
+    "        for j in range(polym.shape[1]):\n",
+    "            for k in range(polym.shape[2]):\n",
+    "                res += polym[i,j,k] * jnp.power(x,i)* jnp.power(y,j)* jnp.power(z,k)\n",
+    "    return(res)\n",
+    "\n",
+    "def generate_noisy_set2(N,coeff_mat):\n",
+    "    noise_frac, rnd_seed =  0.25, int(time.time())\n",
+    "    x,y,z = jnp.linspace(-3, 3,N),jnp.linspace(-3, 3,N),jnp.linspace(-3, 3,N)\n",
+    "    res_pure = f2(x,y,z,coeff_mat)\n",
+    "    # Add some noise to data\n",
+    "\n",
+    "    res_with_noise = res_pure + res_pure * noise_frac * jax.random.normal(rnd_key, (N,))\n",
+    "    return x,y,z,res_with_noise\n",
+    "\n",
+    "polym = gen_polynomial2(3,1,2,5)\n",
+    "print(\"Example polynomial based on Polynomial configuration 2\")\n",
+    "print(polym)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "===== Running Stochastic Gradient Descent =====\n",
+      "Epoch 0: param_w=[[nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]], grad=[[nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]], loss=nan\n",
+      "[[ 0  1  0  0]\n",
+      " [ 3  0  2  2]\n",
+      " [ 0  1  2  1]\n",
+      " [ 1  0  0 -4]\n",
+      " [ 2  1  2 -5]]\n",
+      "[[nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]\n",
+      " [nan nan nan nan]]\n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "#polynomials:\n",
+    "polym1 = gen_polynomial(2,4,6,12)\n",
+    "polym2 = gen_polynomial(3,1,2,5)\n",
+    "\n",
+    "def SGD(polynomial,Nx,Ny,Nz,t):\n",
+    "\n",
+    "    # %% Run the SG loop\n",
+    "    num_epochs = 1\n",
+    "    learning_rate = 0.05\n",
+    "    train_set_size = 10000\n",
+    "    train_ds  = jnp.asarray(generate_noisy_set(train_set_size ,polynomial))\n",
+    "    \n",
+    "    param_w = gen_polynomial(Nx,Ny,Nz,t).astype(float)  # Initial guess for the parameter\n",
+    "\n",
+    "    # %% Define a simple loss function and its gradient\n",
+    "    def loss(param_w, data):\n",
+    "        # return  jnp.sum((data[:,1] - f(data[:,0], param_w))**2)\n",
+    "        res = f(data[0],data[1],data[2], param_w)\n",
+    "\n",
+    "        return jnp.log(jnp.sum((data[3] - res) ** 2)) \n",
+    "\n",
+    "\n",
+    "    # Using JAX automatic differentiation - autograd\n",
+    "    grad_loss = jax.grad(loss)#,allow_int=True)\n",
+    "\n",
+    "    num_points_per_batch = train_set_size // 5\n",
+    "    print(\"\\n===== Running Stochastic Gradient Descent =====\")\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # Get points for the current batch\n",
+    "        for i in range(0, train_set_size, num_points_per_batch):\n",
+    "            batch = train_ds[:,i:i + num_points_per_batch]\n",
+    "            grad = grad_loss(param_w, batch)\n",
+    "            param_w = param_w - learning_rate * grad\n",
+    "\n",
+    "        print(f\"Epoch {epoch}: param_w={param_w}, grad={grad}, loss={loss(param_w, train_ds)}\")\n",
+    "\n",
+    "    print(polynomial)\n",
+    "    print(param_w)\n",
+    "SGD(polym2,3,1 ,2,5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parts of the gradient correlating for the x y and z data became NaN, thus destroying the whole process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 0.  0.  0.]\n",
+      "  [ 0. -2.  0.]]\n",
+      "\n",
+      " [[ 0.  0. -2.]\n",
+      "  [ 0. -1.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  0. -3.]]]\n",
+      "\n",
+      "===== Running Stochastic Gradient Descent =====\n",
+      "Epoch 0:  loss=22.013757705688477\n",
+      "Epoch 1:  loss=21.905046463012695\n",
+      "Epoch 2:  loss=21.78440284729004\n",
+      "Epoch 3:  loss=21.647014617919922\n",
+      "Epoch 4:  loss=21.48792839050293\n",
+      "Epoch 5:  loss=21.303478240966797\n",
+      "Epoch 6:  loss=21.08243179321289\n",
+      "Epoch 7:  loss=20.8350887298584\n",
+      "Epoch 8:  loss=20.543737411499023\n",
+      "Epoch 9:  loss=20.33692741394043\n",
+      "Epoch 10:  loss=20.09905433654785\n",
+      "Epoch 11:  loss=19.927234649658203\n",
+      "Epoch 12:  loss=19.749502182006836\n",
+      "Epoch 13:  loss=19.660423278808594\n",
+      "Epoch 14:  loss=19.583248138427734\n",
+      "Epoch 15:  loss=19.563278198242188\n",
+      "Epoch 16:  loss=19.52655029296875\n",
+      "Epoch 17:  loss=19.523616790771484\n",
+      "Epoch 18:  loss=19.48839569091797\n",
+      "Epoch 19:  loss=19.493303298950195\n",
+      "Epoch 20:  loss=19.469438552856445\n",
+      "Epoch 21:  loss=19.472843170166016\n",
+      "Epoch 22:  loss=19.438831329345703\n",
+      "Epoch 23:  loss=19.43595314025879\n",
+      "Epoch 24:  loss=19.442792892456055\n",
+      "Epoch 25:  loss=19.416461944580078\n",
+      "Epoch 26:  loss=19.416065216064453\n",
+      "Epoch 27:  loss=19.42388343811035\n",
+      "Epoch 28:  loss=19.400354385375977\n",
+      "Epoch 29:  loss=19.40540885925293\n",
+      "Epoch 30:  loss=19.39287567138672\n",
+      "Epoch 31:  loss=19.404157638549805\n",
+      "Epoch 32:  loss=19.38260269165039\n",
+      "Epoch 33:  loss=19.38979721069336\n",
+      "Epoch 34:  loss=19.374271392822266\n",
+      "Epoch 35:  loss=19.377588272094727\n",
+      "Epoch 36:  loss=19.37980079650879\n",
+      "Epoch 37:  loss=19.36992645263672\n",
+      "Epoch 38:  loss=19.382402420043945\n",
+      "Epoch 39:  loss=19.373706817626953\n",
+      "Epoch 40:  loss=19.36064338684082\n",
+      "Epoch 41:  loss=19.370582580566406\n",
+      "Epoch 42:  loss=19.354694366455078\n",
+      "Epoch 43:  loss=19.362871170043945\n",
+      "Epoch 44:  loss=19.3491268157959\n",
+      "Epoch 45:  loss=19.349275588989258\n",
+      "Epoch 46:  loss=19.36125373840332\n",
+      "Epoch 47:  loss=19.35488510131836\n",
+      "Epoch 48:  loss=19.345439910888672\n",
+      "Epoch 49:  loss=19.35390281677246\n",
+      "[[[ 0.  0.  0.]\n",
+      "  [ 0. -2.  0.]]\n",
+      "\n",
+      " [[ 0.  0. -2.]\n",
+      "  [ 0. -1.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  0.  0.]]\n",
+      "\n",
+      " [[ 0.  0.  0.]\n",
+      "  [ 0.  0. -3.]]]\n",
+      "[[[ 0.24658726 -0.03951892 -0.2870798 ]\n",
+      "  [-0.03951892 -0.28707972 -0.40288696]]\n",
+      "\n",
+      " [[-0.03951892 -0.28707972 -0.40288696]\n",
+      "  [-0.28707972 -0.4028869  -0.19080453]]\n",
+      "\n",
+      " [[-0.2870798  -0.40288696 -0.19080448]\n",
+      "  [-0.40288696 -0.19080451 -0.09062378]]\n",
+      "\n",
+      " [[-0.40288696 -0.19080445 -0.09062372]\n",
+      "  [-0.19080445 -0.09062375 -2.7721086 ]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    " \n",
+    "#polynomials:\n",
+    "polym1 = gen_polynomial2(2,4,6,12)\n",
+    "polym2 = gen_polynomial2(3,1,2,5)\n",
+    "\n",
+    "print(polym2)\n",
+    "def SGD(polynomial,Nx,Ny,Nz,t):\n",
+    "\n",
+    "    # %% Run the SG loop\n",
+    "    num_epochs = 50\n",
+    "    learning_rate = 0.05\n",
+    "    train_set_size = 10000\n",
+    "    train_ds  = jnp.asarray(generate_noisy_set2(train_set_size ,polynomial))\n",
+    "    \n",
+    "    param_w = jnp.zeros((Nx+1,Ny+1,Nz+1)) #gen_polynomial2(Nx,Ny,Nz,t).astype(float)  # Initial guess for the parameter\n",
+    "\n",
+    "    # %% Define a simple loss function and its gradient\n",
+    "    def loss(param_w, data):\n",
+    "        # return  jnp.sum((data[:,1] - f(data[:,0], param_w))**2)\n",
+    "        res = f2(data[0],data[1],data[2], param_w)\n",
+    "      \n",
+    "        return jnp.log(jnp.sum((data[3] - res) ** 2)) \n",
+    "\n",
+    "    # Using JAX automatic differentiation - autograd\n",
+    "    grad_loss = jax.grad(loss)\n",
+    "\n",
+    "    num_points_per_batch = train_set_size // 5\n",
+    "    print(\"\\n===== Running Stochastic Gradient Descent =====\")\n",
+    "    for epoch in range(num_epochs):\n",
+    "        # Get points for the current batch\n",
+    "        for i in range(0, train_set_size, num_points_per_batch):\n",
+    "            batch = train_ds[:,i:i + num_points_per_batch]\n",
+    "            grad = grad_loss(param_w, batch)\n",
+    "            param_w = param_w - learning_rate * grad\n",
+    "\n",
+    "        print(f\"Epoch {epoch}:  loss={loss(param_w, train_ds)}\")\n",
+    "    print(polynomial)\n",
+    "    print(param_w)\n",
+    "SGD(polym2,3,1,2,5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it manages to get approximate some cells, but because every variable combination is possible, does this show a very slow convergence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Exercise 5"
    ]
   },
